12. 优化各类工具 + 超级智能体返回增加思考过程 + cos对象存储增加时间戳，防止重复key + 修复死循环问题，reason：前端连接中断，重复发请求。